# Kalba

./: .gitignore  .readthedocs.yaml  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  com.kalbareader.Kalba.metainfo.xml  components.json  index.html  justfile  mkdocs.yml  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: new-dictionary.md  new-grammar-rule.md  new-language-template.md  new-site.md
.github/workflows/: main.yml  rust.yml
data/: bendrines_uuids  current_version.json  dabartines_uuids  site_templates.toml  templates.json
data/frequency_lists/: arabic  german  lithuanian  spanish
data/language_templates/: arabic.toml  german.toml  lithuanian.toml  spanish.toml
data/spyglys/: lithuanian.spyglys  spanish.spyglys
docs/: alternatives.md  backups.md  common_problems.md  dictionaries.md  exporting.md  getting_started.md  grammar.md  index.md  input.md  installation_building.md  installation_linux.md  installation_mac.md  installation_windows.md  manual_stanza_setup.md  new_language.md  next_steps.md  profiles.md  reader.md  requirements.md  spyglys_parser.md  stanza.md  stanza_settings.md  windows_installation.md  word_knowledge.md  word_knowledge_settings.md
scripts/: set_version.bash  update_language_templates.bash
shared/: Cargo.toml
shared/src/: lib.rs
spacy-parsing/: Cargo.toml
spacy-parsing/src/: lib.rs
src/: App.vue  PageFrame.vue  add_to_anki.rs  dictionary.rs  language_parsing.rs  main.rs  main.ts  settings.rs  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/test/: sample_delim_dictionary
src-tauri/resources/test/stardict/: Lithuanian-English Wiktionary dictionary.dict.dz  Lithuanian-English Wiktionary dictionary.idx  Lithuanian-English Wiktionary dictionary.idx.oft  Lithuanian-English Wiktionary dictionary.ifo  Lithuanian-English Wiktionary dictionary.syn
src-tauri/src/: add_to_anki.rs  ankiconnect.rs  commands.rs  dictionary.rs  language_parsing.rs  main.rs  new_language_template.rs  settings.rs  setup_stanza.rs  spyglys_integration.rs  stats.rs
src-ui/: Cargo.toml  index.html  style.css
src-ui/src/: main.rs  reader.rs  settings.rs
src-ui/src/settings/: dictionary_settings.rs  shared_ui.rs  tauri_communicate.rs  wordknowledge_settings.rs
src/components/: BetterTagInput.vue  BetterTooltip.vue  ButtonDialog.vue  DefinitionView.vue  EnableStanza.vue  ExportButton.vue  ExportingConfiguration.vue  FilePicker.vue  GrammarDetails.vue  Heading.vue  Input.vue  LanguageList.vue  RatingButtons.vue  ReaderView.vue  SelectedWordView.vue  Settings.vue  SettingsPage.vue  StyledCheckbox.vue  StyledCombobox.vue  Word.vue  WordView.vue
src/components/settings/: Deck.vue  Dictionaries.vue  Exporting.vue  IndividualDict.vue  Notes.vue  SettingsMenu.vue  WordKnowledge.vue
src/components/ui/accordion/: Accordion.vue  AccordionContent.vue  AccordionItem.vue  AccordionTrigger.vue
src/components/ui/alert-dialog/: AlertDialog.vue  AlertDialogAction.vue  AlertDialogCancel.vue  AlertDialogContent.vue  AlertDialogDescription.vue  AlertDialogFooter.vue  AlertDialogHeader.vue  AlertDialogTitle.vue
src/components/ui/badge/: Badge.vue
src/components/ui/button/: Button.vue  index.ts
src/components/ui/card/: Card.vue  CardDescription.vue  CardFooter.vue  CardHeader.vue  CardTitle.vue
src/components/ui/chart/: ChartLegend.vue  (+1 more)
src/components/ui/chart-bar/: BarChart.vue
src/components/ui/chart-donut/: DonutChart.vue
src/lib/: utils.ts
src/pages/: ComingSoon.vue  GettingStarted.vue
src/pages/dashboard/: Index.vue
src/pages/reader/: Index.vue  Reader.vue
src/pages/settings/: Index.vue  Settings.vue
stanza/: requirements.txt  run.py
(+50 files in other folders)
