[package]
name = "language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.2.1", features = [
  "wl-clipboard-rs",
  "wayland-data-control",
], default-features = false }
dirs = "5.0.1"
eframe = "0.22.0"
env_logger = "0.10.0"
pyo3 = { version = "0.19.2", features = ["auto-initialize"] }
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
toml = "0.8.0"
