[package]
name = "shared"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde-map-to-array = { version = "1.1.1", features = ["std"] }
toml = "0.8.15"

[dev-dependencies]
rusty-hook = "^0.11.2"
