[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [
  "fs-read-file",
  "dialog-all",
  "shell-open",
] }
stardict = "0.2.0"
reqwest = { version = "0.11.22", features = ["json"] }
shared = { path = "../shared" }
toml = "0.8.2"
dirs = "5.0.1"
chrono = { version = "0.4.31", features = ["serde"] }
lol_html = "1.2.1"
select = "0.6.0"
thiserror = "1.0.61"
tokio = { version = "1.29.1", features = ["sync"] }
log = "0.4.22"
spyglys = "0.1.1"

[dependencies.simple_logger]
version = "5.0.0"
features = ["colors", "stderr"]


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
