[package]
name = "src-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.1", features = ["csr", "nightly"] }
serde = { version = "1.0.189", features = ["derive"] }

tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = [
  "all",
] }
